tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/spec/inline-table-3-0.stderr
TOML parse error at line 3, column 1
  |
3 | type = { edible = false }  # INVALID
  | ^
duplicate key `type` in table `product`
